проверить указательную линию в блоке footer

--- a/index.html
+++ b/index.html
@@ -13,42 +13,46 @@
     <header class="header">
         <div class="nav">
             <div class="nav__logo">
-            <img class="nav__logo-img" src="images/Tesla-Wordmark-Red.svg" alt="">
-            <img class="nav__logo-img-mobi" src="images/Tesla-Wordmark-Redmobi-logo.png" alt="">
+                <img class="nav__logo-img" src="images/Tesla-Wordmark-Red.svg" alt="">
+                <img class="nav__logo-img-mobi" src="images/Tesla-Wordmark-Redmobi-logo.png" alt="">
             </div>
             <div class="nav__menu">
                 <div class="nav__menu-first">
-                <a href="" class="nav__menu-s">Model S</a>
-                <a href="" class="nav__menu-x">Model X</a>
-            </div>
-            <div class="nav__menu-second">
-                <a href="" class="nav__menu-3">Model 3</a>
-                <a href="" class="nav__menu-roadster">Roadster</a>
-                <a href="" class="nav__menu-energy">Energy</a>
-            </div>
+                    <a href="" class="nav__menu-s">Model S</a>
+                    <a href="" class="nav__menu-x">Model X</a>
+                </div>
+                <div class="nav__menu-second">
+                    <a href="" class="nav__menu-3">Model 3</a>
+                    <a href="" class="nav__menu-roadster">Roadster</a>
+                    <a href="" class="nav__menu-energy">Energy</a>
+                </div>
             </div>
             <div class="menu">
                 <a href="" class="menu__shop">Магазин</a>
                 <a href="" class="menu__enter">Войти</a>
-                <img class="menu__img-burger" src="images/burger.svg" alt="">
+                <img class="menu__img-burger" src="images/menu.png" alt="">
                 <img class="menu__img-burger-ipad" src="images/Vectorburger-ipad.svg" alt="">
             </div>
         </div>
         <div class="tesla-title">
             <div class="tesla-title__subtitle">Model S</div>
             <div class="tesla-title__desk">Добро пожаловать в будущее!</div>
-            <div class="tesla-title__car"><img class="tesla-title__car-pc" src="images/tesla-png-tesla-png-pc.png" alt=""></div>
-            <div class="tesla-title__car"><img class="tesla-title__car-mobi" src="images/tesla-png-tesla-png-hd-mobi.png" alt=""></div>
-            <div class="tesla-title__car"><img class="tesla-title__car-ipad" src="images/tesla-png-tesla-png-hd-ipad.png" alt=""></div>
+            <div class="tesla-title__car"><img class="tesla-title__car-pc" src="images/tesla-png-tesla-png-pc.png"
+                    alt=""></div>
+            <div class="tesla-title__car"><img class="tesla-title__car-mobi"
+                    src="images/tesla-png-tesla-png-hd-mobi.png" alt=""></div>
+            <div class="tesla-title__car"><img class="tesla-title__car-ipad"
+                    src="images/tesla-png-tesla-png-hd-ipad.png" alt=""></div>
         </div>
         <div class="tesla-info-block">
             <div class="info-block">
                 <img class="info-block__img-pc" src="images/Group-7-pc.svg" alt="">
             </div>
             <div class="info-block">
-                <div class="info-block__img-ipad-left"><img class="info-block__img" src="images/2,7ipad.png" alt=""></div>
-                <div class="info-block__img-ipad-right"><img class="info-block__img" src="images/632ipad.png" alt=""></div>
-
+                <div class="info-block__img-ipad-left"><img class="info-block__img" src="images/2,7ipad.png" alt="">
+                </div>
+                <div class="info-block__img-ipad-right"><img class="info-block__img" src="images/632ipad.png" alt="">
+                </div>
             </div>
             <div class="info-block">
                 <img class="info-block__mobile-right" src="images/Group-8-mobi.png" alt="">
@@ -68,7 +72,7 @@
         </div>
         <a href="" class="go-bottom"><img src="images/Vector.png" alt=""></a>
     </header>
-    <!-- <section class="main">
+    <section class="main">
         <div class="main__inner">
             <div class="left-section">
                 <img src="images/background-section-mobi.png" alt="" class="left-section__img">
@@ -76,17 +80,18 @@
             </div>
             <div class="right-section">
                 <div class="main-top">
-                    <h3 class="right-section__title">Будущее вождения</h3>
-                    <p class="right-section__text">Модель S обладает лучшей в своем классе вместимостью: в машине
-                        поместится до пяти взрослых и
-                        двух детей. Оснащена современным 17-дюймовым сенсорным экраном. Усовершенствованная шумовая
-                        инженерия создает динамику звука, сравнимую со студией звукозаписи, а стеклянная крыша
-                        обеспечивает просторный интерьер для каждого пассажира.</p>
-                </div>
-                <div class="right-section__img">
-                    <img class="right-section__img-display" src="images/Display.png" alt="">
-                    <img class="right-section__img-wireless" src="images/Wireless-soft.png" alt="">
-                    <img class="right-section__img-bag" src="images/Bag-capacity.png" alt="">
+                    <div class="right-section__title">Будущее вождения
+                        <p class="right-section__text">Модель S обладает лучшей в своем классе вместимостью: в машине
+                            поместится до пяти взрослых и
+                            двух детей. Оснащена современным 17-дюймовым сенсорным экраном. Усовершенствованная шумовая
+                            инженерия создает динамику звука, сравнимую со студией звукозаписи, а стеклянная крыша
+                            обеспечивает просторный интерьер для каждого пассажира.</p>
+                    </div>
+                    <div class="right-section__img">
+                        <img class="right-section__img-display" src="images/Display.png" alt="">
+                        <img class="right-section__img-wireless" src="images/Wireless-soft.png" alt="">
+                        <img class="right-section__img-bag" src="images/Bag-capacity.png" alt="">
+                    </div>
                 </div>
                 <div class="features">
                     <div class="features-info">
@@ -99,8 +104,8 @@
                 </div>
             </div>
         </div>
-    </section> -->
-    <!-- <footer class="footer">
+    </section>
+    <footer class="footer">
         <div class="footer__left">
             <div class="footer__left-head">
                 <h3 class="footer__title">Самый безопасный автомобиль в мире</h3>
@@ -109,69 +114,67 @@
                     установила рекорд по наименьшей вероятности травмы пассажиров - от несчастных случаев на
                     переднем, боковом, заднем сидении и в ДТП с переворотом авто.</p>
             </div>
-            <div class="footer__left-body">
-                <h3 class="left-body__title">Оценка защиты:</h3>
-                <div class="rating">
-                    <div class="rating__sub-title">Спереди</div>
-                    <div class="rating__star">
-                        <img class="rating__star-img" src="images/Star.png" alt="">
-                        <img class="rating__star-img" src="images/Star.png" alt="">
-                        <img class="rating__star-img" src="images/Star.png" alt="">
-                        <img class="rating__star-img" src="images/Star.png" alt="">
-                        <img class="rating__star-img" src="images/Star.png" alt="">
+            <div class="left-body">
+                <div class="left-body__title">Оценка защиты:</div>
+                <div class="left-body__info">
+                    <div class="left-body__first">спереди</div>
+                    <div class="left-body__star-img">
+                        <div><img src="images/Star.png" alt=""></div>
+                        <div><img src="images/Star.png" alt=""></div>
+                        <div><img src="images/Star.png" alt=""></div>
+                        <div><img src="images/Star.png" alt=""></div>
+                        <div><img src="images/Star.png" alt=""></div>
+                    </div>
+                </div>
+                <div class="left-body__info">
+                    <div class="left-body__second">сбоку</div>
+                    <div class="left-body__star-img">
+                        <div><img src="images/Star.png" alt=""></div>
+                        <div><img src="images/Star.png" alt=""></div>
+                        <div><img src="images/Star.png" alt=""></div>
+                        <div><img src="images/Star.png" alt=""></div>
+                        <div><img src="images/Star.png" alt=""></div>
+                    </div>
+                </div>
+                <div class="left-body__info">
+                    <div class="left-body__middle">сбоку<span class="left-body__middle-support">(стойка)</span></div>
+                    <div class="left-body__star-img">
+                        <div><img src="images/Star.png" alt=""></div>
+                        <div><img src="images/Star.png" alt=""></div>
+                        <div><img src="images/Star.png" alt=""></div>
+                        <div><img src="images/Star.png" alt=""></div>
+                        <div><img src="images/Star.png" alt=""></div>
+                    </div>
+                </div>
+                <div class="left-body__info">
+                    <div class="left-body__penultimate">водитель</div>
+                    <div class="left-body__star-img">
+                        <div><img src="images/Star.png" alt=""></div>
+                        <div><img src="images/Star.png" alt=""></div>
+                        <div><img src="images/Star.png" alt=""></div>
+                        <div><img src="images/Star.png" alt=""></div>
+                        <div><img src="images/Star.png" alt=""></div>
+                    </div>
+                </div>
+                <div class="left-body__info">
+                    <div class="left-body__last">пассажир</div>
+                    <div class="left-body__star-img">
+                        <div><img src="images/Star.png" alt=""></div>
+                        <div><img src="images/Star.png" alt=""></div>
+                        <div><img src="images/Star.png" alt=""></div>
+                        <div><img src="images/Star.png" alt=""></div>
+                        <div><img src="images/Star.png" alt=""></div>
                     </div>
                 </div>
             </div>
-            <div class="rating">
-                <div class="rating__sub-title">Сбоку</div>
-                <div class="rating__star">
-                    <img class="rating__star-img" src="images/Star.png" alt="">
-                    <img class="rating__star-img" src="images/Star.png" alt="">
-                    <img class="rating__star-img" src="images/Star.png" alt="">
-                    <img class="rating__star-img" src="images/Star.png" alt="">
-                    <img class="rating__star-img" src="images/Star.png" alt="">
-                </div>
-            </div>
-            <div class="rating">
-                <div class="rating__sub-title">Сбоку<span class="rating__add">(стойка)</span></div>
-                <div class="rating__star">
-                    <img class="rating__star-img" src="images/Star.png" alt="">
-                    <img class="rating__star-img" src="images/Star.png" alt="">
-                    <img class="rating__star-img" src="images/Star.png" alt="">
-                    <img class="rating__star-img" src="images/Star.png" alt="">
-                    <img class="rating__star-img" src="images/Star.png" alt="">
-                </div>
-            </div>
-            <div class="rating">
-                <div class="rating__sub-title">Водитель</div>
-                <div class="rating__star">
-                    <img class="rating__star-img" class="rating__star-img" src="images/Star.png" alt="">
-                    <img class="rating__star-img" class="rating__star-img" src="images/Star.png" alt="">
-                    <img class="rating__star-img" class="rating__star-img" src="images/Star.png" alt="">
-                    <img class="rating__star-img" class="rating__star-img" src="images/Star.png" alt="">
-                    <img class="rating__star-img" class="rating__star-img" src="images/Star.png" alt="">
-                </div>
-            </div>
-            <div class="rating-second">
-                <div class="rating__sub-title">Пассажир</div>
-                <div class="rating__star">
-                    <img class="rating__star-img" src="images/Star.png" alt="">
-                    <img class="rating__star-img" src="images/Star.png" alt="">
-                    <img class="rating__star-img" src="images/Star.png" alt="">
-                    <img class="rating__star-img" src="images/Star.png" alt="">
-                    <img class="rating__star-img" src="images/Star.png" alt="">
-                </div>
-            </div>
+            <div class="security"><img src="images/security.png" alt=""></div>
             <div class="footer__left-bottom">
-                <img class="security" src="images/security.png" alt="">
-                <div class="footer-info__order">
-                    <div class="footer-info">
-                        <img class="footer-info__img" src="images/Group.svg" alt="">
-                        <p class="footer-info__desk">узнать больше</p>
-                    </div>
-                    <div class="footer__order">
-                        <p class="footer__order-desk">заказать</p>
-                    </div>
+                <div class="footer-info">
+                    <div class="footer-info__img"><img src="images/Group.svg" alt=""></div>
+                    <p class="footer-info__desk">узнать больше</p>
+                </div>
+                <div class="footer__order">
+                    <div class="footer__order-desk">заказать</div>
                 </div>
             </div>
         </div>
@@ -179,6 +182,12 @@
             <div class="right-pc">
                 <h3 class="footer__right-title"> Model S</h3>
                 <img class="right-pc__img" src="images/Car-frame-pc.png" alt="">
+                <div class="pointer-left"><img src="/images/footer-car-line-left-pc.png" alt="">Защита от удара спереди</div>
+                <div class="pointer-top"><img src="/images/footer-car-line-top-pc.png" alt="">Защита от удара сбоку</div>
+                <div class="pointer-bottom">
+                    <div class="pointer-bottom__img"><img src="/images/footer-car-line-bottom-pc.png" alt=""></div>
+                    <div class="pointer-bottom__desk"></d>Минимальный риск <br> перевернуться в аварии</div>
+                </div>
             </div>
             <div class="right-mobi">
                 <h3 class="footer__right-title"> Model S</h3>
@@ -189,7 +198,7 @@
                 <img class="right-ipad__img" src="images/Car-frame-ipad.png" alt="">
             </div>
         </div>
-    </footer> -->
+    </footer>
 </body>
 
 </html>
