--- a/index.html
+++ b/index.html
@@ -107,63 +107,66 @@
     </section>
     <footer class="footer">
         <div class="footer__left">
-            <div class="footer__left-head">
-                <h3 class="footer__title">Самый безопасный автомобиль в мире</h3>
-                <p class="footer__text">Модель S достигла наивысшей оценки безопасности любого автомобиля,
-                    когда-либо испытанного, и
-                    установила рекорд по наименьшей вероятности травмы пассажиров - от несчастных случаев на
-                    переднем, боковом, заднем сидении и в ДТП с переворотом авто.</p>
-            </div>
-            <div class="left-body">
-                <div class="left-body__title">Оценка защиты:</div>
-                <div class="left-body__info">
-                    <div class="left-body__first">спереди</div>
-                    <div class="left-body__star-img">
-                        <div><img src="images/Star.png" alt=""></div>
-                        <div><img src="images/Star.png" alt=""></div>
-                        <div><img src="images/Star.png" alt=""></div>
-                        <div><img src="images/Star.png" alt=""></div>
-                        <div><img src="images/Star.png" alt=""></div>
-                    </div>
+            <div class="footer__left-ipad">
+                <div class="footer__left-head">
+                    <h3 class="footer__title">Самый безопасный автомобиль в мире</h3>
+                    <p class="footer__text">Модель S достигла наивысшей оценки безопасности любого автомобиля,
+                        когда-либо испытанного, и
+                        установила рекорд по наименьшей вероятности травмы пассажиров - от несчастных случаев на
+                        переднем, боковом, заднем сидении и в ДТП с переворотом авто.</p>
                 </div>
-                <div class="left-body__info">
-                    <div class="left-body__second">сбоку</div>
-                    <div class="left-body__star-img">
-                        <div><img src="images/Star.png" alt=""></div>
-                        <div><img src="images/Star.png" alt=""></div>
-                        <div><img src="images/Star.png" alt=""></div>
-                        <div><img src="images/Star.png" alt=""></div>
-                        <div><img src="images/Star.png" alt=""></div>
+                <div class="left-body">
+                    <div class="left-body__title">Оценка защиты:</div>
+                    <div class="left-body__info">
+                        <div class="left-body__first">спереди</div>
+                        <div class="left-body__star-img">
+                            <div><img src="images/Star.png" alt=""></div>
+                            <div><img src="images/Star.png" alt=""></div>
+                            <div><img src="images/Star.png" alt=""></div>
+                            <div><img src="images/Star.png" alt=""></div>
+                            <div><img src="images/Star.png" alt=""></div>
+                        </div>
                     </div>
-                </div>
-                <div class="left-body__info">
-                    <div class="left-body__middle">сбоку<span class="left-body__middle-support">(стойка)</span></div>
-                    <div class="left-body__star-img">
-                        <div><img src="images/Star.png" alt=""></div>
-                        <div><img src="images/Star.png" alt=""></div>
-                        <div><img src="images/Star.png" alt=""></div>
-                        <div><img src="images/Star.png" alt=""></div>
-                        <div><img src="images/Star.png" alt=""></div>
+                    <div class="left-body__info">
+                        <div class="left-body__second">сбоку</div>
+                        <div class="left-body__star-img">
+                            <div><img src="images/Star.png" alt=""></div>
+                            <div><img src="images/Star.png" alt=""></div>
+                            <div><img src="images/Star.png" alt=""></div>
+                            <div><img src="images/Star.png" alt=""></div>
+                            <div><img src="images/Star.png" alt=""></div>
+                        </div>
                     </div>
-                </div>
-                <div class="left-body__info">
-                    <div class="left-body__penultimate">водитель</div>
-                    <div class="left-body__star-img">
-                        <div><img src="images/Star.png" alt=""></div>
-                        <div><img src="images/Star.png" alt=""></div>
-                        <div><img src="images/Star.png" alt=""></div>
-                        <div><img src="images/Star.png" alt=""></div>
-                        <div><img src="images/Star.png" alt=""></div>
+                    <div class="left-body__info">
+                        <div class="left-body__middle">сбоку<span class="left-body__middle-support">(стойка)</span>
+                        </div>
+                        <div class="left-body__star-img">
+                            <div><img src="images/Star.png" alt=""></div>
+                            <div><img src="images/Star.png" alt=""></div>
+                            <div><img src="images/Star.png" alt=""></div>
+                            <div><img src="images/Star.png" alt=""></div>
+                            <div><img src="images/Star.png" alt=""></div>
+                        </div>
                     </div>
-                </div>
-                <div class="left-body__info">
-                    <div class="left-body__last">пассажир</div>
-                    <div class="left-body__star-img">
-                        <div><img src="images/Star.png" alt=""></div>
-                        <div><img src="images/Star.png" alt=""></div>
-                        <div><img src="images/Star.png" alt=""></div>
-                        <div><img src="images/Star.png" alt=""></div>
-                        <div><img src="images/Star.png" alt=""></div>
+                    <div class="left-body__info">
+                        <div class="left-body__penultimate">водитель</div>
+                        <div class="left-body__star-img">
+                            <div><img src="images/Star.png" alt=""></div>
+                            <div><img src="images/Star.png" alt=""></div>
+                            <div><img src="images/Star.png" alt=""></div>
+                            <div><img src="images/Star.png" alt=""></div>
+                            <div><img src="images/Star.png" alt=""></div>
+                        </div>
+                    </div>
+                    <div class="left-body__info">
+                        <div class="left-body__last">пассажир</div>
+                        <div class="left-body__star-img">
+                            <div><img src="images/Star.png" alt=""></div>
+                            <div><img src="images/Star.png" alt=""></div>
+                            <div><img src="images/Star.png" alt=""></div>
+                            <div><img src="images/Star.png" alt=""></div>
+                            <div><img src="images/Star.png" alt=""></div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -180,13 +183,20 @@
         </div>
         <div class="footer__right">
             <div class="right-pc">
-                <h3 class="footer__right-title"> Model S</h3>
-                <img class="right-pc__img" src="images/Car-frame-pc.png" alt="">
-                <div class="pointer-left"><img src="/images/footer-car-line-left-pc.png" alt="">Защита от удара спереди</div>
-                <div class="pointer-top"><img src="/images/footer-car-line-top-pc.png" alt="">Защита от удара сбоку</div>
-                <div class="pointer-bottom">
-                    <div class="pointer-bottom__img"><img src="/images/footer-car-line-bottom-pc.png" alt=""></div>
-                    <div class="pointer-bottom__desk"></d>Минимальный риск <br> перевернуться в аварии</div>
+                <div class="footer__right-title"> Model S</div>
+                <div class="right-pc__img"><img src="images/Car-frame-pc.png" alt="">
+                    <div class="pointer-left">
+                        <div class="pointer-left__img"><img src="/images/footer-car-line-left-pc.png" alt=""></div>
+                        <div class="pointer-left__desk"> Защита от удара спереди</div>
+                    </div>
+                    <div class="pointer-top">
+                        <div class="pointer-top__img"><img src="/images/footer-car-line-top-pc.png" alt=""></div>
+                        <div class="pointer-top__desk">Защита от удара сбоку</div>
+                    </div>
+                    <div class="pointer-bottom">
+                        <div class="pointer-bottom__img"><img src="/images/footer-car-line-bottom-pc.png" alt=""></div>
+                        <div class="pointer-bottom__desk">Минимальный риск <br> перевернуться в аварии</div>
+                    </div>
                 </div>
             </div>
             <div class="right-mobi">
@@ -194,8 +204,20 @@
                 <img class="right-mobi__img" src="images/Car-frame-mobi.png" alt="">
             </div>
             <div class="right-ipad">
-                <h3 class="footer__right-title"> Model S</h3>
-                <img class="right-ipad__img" src="images/Car-frame-ipad.png" alt="">
+                <div class="footer__right-title"> Model S</div>
+                <div class="right-ipad__img"><img src="images/Car-frame-ipad.png" alt=""></div>
+                <div class="pointer-left">
+                    <div class="pointer-left__img"><img src="/images/footer-car-line-left-ipad.png" alt=""></div>
+                    <div class="pointer-left__desk"> Защита от удара спереди</div>
+                </div>
+                <div class="pointer-top">
+                    <div class="pointer-top__img"><img src="/images/footer-car-line-top-ipad.png" alt=""></div>
+                    <div class="pointer-top__desk">Защита от удара сбоку</div>
+                </div>
+                <div class="pointer-bottom">
+                    <div class="pointer-bottom__img"><img src="/images/footer-car-line-bottom-ipad.png" alt=""></div>
+                    <div class="pointer-bottom__desk">Минимальный риск <br> перевернуться в аварии</div>
+                </div>
             </div>
         </div>
     </footer>
