--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="order">Заказать</div>
             </div>
         </div>
-        <a href="" class="go-bottom"><img src="images/Vector.png" alt=""></a>
+        <a href="" class="go-bottom"><img class="go-bottom__img" src="images/Vector.png" alt=""></a>
     </header>
     <section class="main">
         <div class="main__inner">
@@ -83,7 +83,7 @@
                     <div class="right-section__title">Будущее вождения
                         <p class="right-section__text">Модель S обладает лучшей в своем классе вместимостью: в машине
                             поместится до пяти взрослых и
-                            двух детей. Оснащена современным 17-дюймовым сенсорным экраном. Усовершенствованная шумовая
+                            двух детей. Оснащена современным <br> 17-дюймовым сенсорным экраном. Усовершенствованная шумовая
                             инженерия создает динамику звука, сравнимую со студией звукозаписи, а стеклянная крыша
                             обеспечивает просторный интерьер для каждого пассажира.</p>
                     </div>
@@ -95,7 +95,7 @@
                 </div>
                 <div class="features">
                     <div class="features-info">
-                        <img class="features-info__img" src="images/Group.svg" alt="">
+                        <div class="features-info__img"><img src="images/Group.svg" alt=""></div>
                         <p class="features-info__desk">узнать больше</p>
                     </div>
                     <div class="features__order">
@@ -117,57 +117,59 @@
                 </div>
                 <div class="left-body">
                     <div class="left-body__title">Оценка защиты:</div>
+                    <div class="left-body__ipad">
                     <div class="left-body__info">
                         <div class="left-body__first">спереди</div>
                         <div class="left-body__star-img">
-                            <div><img src="images/Star.png" alt=""></div>
-                            <div><img src="images/Star.png" alt=""></div>
-                            <div><img src="images/Star.png" alt=""></div>
-                            <div><img src="images/Star.png" alt=""></div>
-                            <div><img src="images/Star.png" alt=""></div>
+                            <div class="star"><img src="images/Star.png" alt=""></div>
+                            <div class="star"><img src="images/Star.png" alt=""></div>
+                            <div class="star"><img src="images/Star.png" alt=""></div>
+                            <div class="star"><img src="images/Star.png" alt=""></div>
+                            <div class="star"><img src="images/Star.png" alt=""></div>
                         </div>
                     </div>
                     <div class="left-body__info">
                         <div class="left-body__second">сбоку</div>
                         <div class="left-body__star-img">
-                            <div><img src="images/Star.png" alt=""></div>
-                            <div><img src="images/Star.png" alt=""></div>
-                            <div><img src="images/Star.png" alt=""></div>
-                            <div><img src="images/Star.png" alt=""></div>
-                            <div><img src="images/Star.png" alt=""></div>
+                            <div class="star"><img src="images/Star.png" alt=""></div>
+                            <div class="star"><img src="images/Star.png" alt=""></div>
+                            <div class="star"><img src="images/Star.png" alt=""></div>
+                            <div class="star"><img src="images/Star.png" alt=""></div>
+                            <div class="star"><img src="images/Star.png" alt=""></div>
                         </div>
                     </div>
                     <div class="left-body__info">
                         <div class="left-body__middle">сбоку<span class="left-body__middle-support">(стойка)</span>
                         </div>
                         <div class="left-body__star-img">
-                            <div><img src="images/Star.png" alt=""></div>
-                            <div><img src="images/Star.png" alt=""></div>
-                            <div><img src="images/Star.png" alt=""></div>
-                            <div><img src="images/Star.png" alt=""></div>
-                            <div><img src="images/Star.png" alt=""></div>
+                            <div class="star"><img src="images/Star.png" alt=""></div>
+                            <div class="star"><img src="images/Star.png" alt=""></div>
+                            <div class="star"><img src="images/Star.png" alt=""></div>
+                            <div class="star"><img src="images/Star.png" alt=""></div>
+                            <div class="star"><img src="images/Star.png" alt=""></div>
                         </div>
                     </div>
                     <div class="left-body__info">
                         <div class="left-body__penultimate">водитель</div>
                         <div class="left-body__star-img">
-                            <div><img src="images/Star.png" alt=""></div>
-                            <div><img src="images/Star.png" alt=""></div>
-                            <div><img src="images/Star.png" alt=""></div>
-                            <div><img src="images/Star.png" alt=""></div>
-                            <div><img src="images/Star.png" alt=""></div>
+                            <div class="star"><img src="images/Star.png" alt=""></div>
+                            <div class="star"><img src="images/Star.png" alt=""></div>
+                            <div class="star"><img src="images/Star.png" alt=""></div>
+                            <div class="star"><img src="images/Star.png" alt=""></div>
+                            <div class="star"><img src="images/Star.png" alt=""></div>
                         </div>
                     </div>
                     <div class="left-body__info">
                         <div class="left-body__last">пассажир</div>
                         <div class="left-body__star-img">
-                            <div><img src="images/Star.png" alt=""></div>
-                            <div><img src="images/Star.png" alt=""></div>
-                            <div><img src="images/Star.png" alt=""></div>
-                            <div><img src="images/Star.png" alt=""></div>
-                            <div><img src="images/Star.png" alt=""></div>
+                            <div class="star"><img src="images/Star.png" alt=""></div>
+                            <div class="star"><img src="images/Star.png" alt=""></div>
+                            <div class="star"><img src="images/Star.png" alt=""></div>
+                            <div class="star"><img src="images/Star.png" alt=""></div>
+                            <div class="star"><img src="images/Star.png" alt=""></div>
                         </div>
                     </div>
+                </div>
                 </div>
             </div>
             <div class="security"><img src="images/security.png" alt=""></div>
@@ -186,37 +188,51 @@
                 <div class="footer__right-title"> Model S</div>
                 <div class="right-pc__img"><img src="images/Car-frame-pc.png" alt="">
                     <div class="pointer-left">
-                        <div class="pointer-left__img"><img src="/images/footer-car-line-left-pc.png" alt=""></div>
+                        <div class="pointer-left__img"><img class="pointer-left__img-pc" src="/images/footer-car-line-left-pc.png" alt=""></div>
                         <div class="pointer-left__desk"> Защита от удара спереди</div>
                     </div>
                     <div class="pointer-top">
-                        <div class="pointer-top__img"><img src="/images/footer-car-line-top-pc.png" alt=""></div>
-                        <div class="pointer-top__desk">Защита от удара сбоку</div>
+                        <div class="pointer-top__img"><img class="pointer-top__img-pc" src="/images/footer-car-line-top-pc.png" alt=""></div>
+                        <div class="pointer-top__desk"> Защита от удара сбоку</div>
                     </div>
                     <div class="pointer-bottom">
-                        <div class="pointer-bottom__img"><img src="/images/footer-car-line-bottom-pc.png" alt=""></div>
+                        <div class="pointer-bottom__img"><img class="pointer-bottom__img-pc" src="/images/footer-car-line-bottom-pc.png" alt=""></div>
                         <div class="pointer-bottom__desk">Минимальный риск <br> перевернуться в аварии</div>
                     </div>
                 </div>
             </div>
             <div class="right-mobi">
                 <h3 class="footer__right-title"> Model S</h3>
-                <img class="right-mobi__img" src="images/Car-frame-mobi.png" alt="">
-            </div>
-            <div class="right-ipad">
-                <div class="footer__right-title"> Model S</div>
-                <div class="right-ipad__img"><img src="images/Car-frame-ipad.png" alt=""></div>
+                <div class="right-mobi__img"><img src="images/Car-frame-mobi.png" alt="">
                 <div class="pointer-left">
-                    <div class="pointer-left__img"><img src="/images/footer-car-line-left-ipad.png" alt=""></div>
+                    <div class="pointer-left__img"><img class="pointer-left__img-mobi" src="/images/footer-car-line-left-mobi.png" alt=""></div>
                     <div class="pointer-left__desk"> Защита от удара спереди</div>
                 </div>
                 <div class="pointer-top">
-                    <div class="pointer-top__img"><img src="/images/footer-car-line-top-ipad.png" alt=""></div>
+                    <div class="pointer-top__img"><img class="pointer-top__img-mobi" src="/images/footer-car-line-top-mobi.png" alt=""></div>
                     <div class="pointer-top__desk">Защита от удара сбоку</div>
                 </div>
                 <div class="pointer-bottom">
-                    <div class="pointer-bottom__img"><img src="/images/footer-car-line-bottom-ipad.png" alt=""></div>
+                    <div class="pointer-bottom__img"><img class="pointer-bottom__img-mobi" src="/images/footer-car-line-bottom-mobi.png" alt=""></div>
                     <div class="pointer-bottom__desk">Минимальный риск <br> перевернуться в аварии</div>
+                </div>
+                </div>
+            </div>
+            <div class="right-ipad">
+                <div class="footer__right-title"> Model S</div>
+                <div class="right-ipad__img"><img src="images/Car-frame-ipad.png" alt="">
+                    <div class="pointer-left">
+                        <div class="pointer-left__img"><img class="pointer-left__img-ipad" src="/images/footer-car-line-left-ipad.png" alt=""></div>
+                        <div class="pointer-left__desk"> Защита от удара спереди</div>
+                    </div>
+                    <div class="pointer-top">
+                        <div class="pointer-top__img"><img class="pointer-top__img-ipad" src="/images/footer-car-line-top-ipad.png" alt=""></div>
+                        <div class="pointer-top__desk">Защита от удара сбоку</div>
+                    </div>
+                    <div class="pointer-bottom">
+                        <div class="pointer-bottom__img"><img class="pointer-bottom__img-ipad" src="/images/footer-car-line-bottom-ipad.png" alt=""></div>
+                        <div class="pointer-bottom__desk">Минимальный риск <br> перевернуться в аварии</div>
+                    </div>
                 </div>
             </div>
         </div>
